# coffer

./: .dockerignore  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
.codex/: compact_prompt.md  config.toml  hooks.json
.codex/hooks/: pre_compact_snapshot.py
.codex/state/: HANDOFF.md
ansible/: KOLLA_ANSIBLE_COMMIT  coffer.yml  kolla-ansible-coffer
docker/: README.md  kolla-build.conf.sample
docker/coffer/: Dockerfile.j2
docker/coffer-registry/: Dockerfile.j2
docker/config/: coffer-api.json.j2  coffer-bootstrap.json.j2  coffer-edge.json.j2  coffer-reconcile.json.j2  coffer-registry.json.j2
docs/: AI_WORKFLOW.md  product-discovery.md
docs/adrs/: 0001-compose-cnc-distribution.md  0002-keystone-application-credential-token-broker.md  0003-rgw-s3-single-region-storage.md  0004-mvp-scope-private-project-registry.md  0005-name-coffer-and-oci-registry-service.md  (+9 more)
etc/: coffer-reconcile.conf.sample  coffer.conf.sample  gunicorn.conf.py
migrations/: env.py
prompts/: long-horizon-harness.md
requirements/: production-constraints.txt
tests/: conftest.py  test_api_runner.py  test_bootstrap.py  test_config_validator.py  test_credentials.py  test_edge_runner.py  test_inventory.py  test_inventory_scale.py  test_keystone.py  test_live_inventory_verification.py  test_migrations.py  test_observability.py  test_quota.py  test_quota_admission.py  test_quota_import.py  test_quota_import_verification.py  test_quota_reconciliation.py  test_reconciliation_runner.py  test_registry_proxy.py  test_repositories.py  test_token_api.py  test_tokens.py
(+251 files in other folders)
